--- a/product.html
+++ b/product.html
@@ -92,7 +92,7 @@
                         <nav class="main-nav">
                             <ul class="menu sf-arrows">
                                 <li class="megamenu-container active">
-                                    <a href="index.html" class="sf-with-ul">Home</a>
+                                    <a href="index-4.html" class="sf-with-ul">Home</a>
 
                                     <div class="megamenu demo">
                                         <div class="menu-col">
@@ -848,7 +848,7 @@
                             <figure class="product-media">
                                 <span class="product-label label-new">New</span>
                                 <a href="product.html">
-                                    <img src="assets/images/products/product-4.jpg" alt="Product image" class="product-image">
+                                    <img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcRI3u7_eeMm-8E0muJFMDsWVYeBXI_gCn9Qvo9mRa4uIsIGWp778BMK2W1DH53jkLRyMRadkWRcakLAO-9TbM33Fd7bRmwHVQWlpi2p3zwGz4YVlYlmcZH2qg&usqp=CAE" alt="Product image" class="product-image">
                                 </a>
 
                                 <div class="product-action-vertical">
@@ -879,14 +879,14 @@
 
                                 <div class="product-nav product-nav-thumbs">
                                     <a href="#" class="active">
-                                        <img src="assets/images/products/product-4-thumb.jpg" alt="product desc">
+                                        <img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcQLEf88W72N8UYbiyaewkqztkly8B7pulOgiNIrkiKtTbLUcRGEZFKqCKB5D6lze7yxtz7nVNuGVi6C69j7dozDePbp1eH_o8W0NpaGZv3dzn8AL1hBROziWw&usqp=CAE" alt="product desc">
                                     </a>
                                     <a href="#">
-                                        <img src="assets/images/products/product-4-2-thumb.jpg" alt="product desc">
+                                        <img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcTNS-4Wsydfz2o-lNpkexQFEFSJiMZqVlalUf1ST92PcERlU8caiE5KHzkEkMg5sOGeTRSVNfP9qcftGHgdIY3JWdqY7s78kzM59KLYfGCQBQ2sinvVaF7t_g&usqp=CAE" alt="product desc">
                                     </a>
 
                                     <a href="#">
-                                        <img src="assets/images/products/product-4-3-thumb.jpg" alt="product desc">
+                                        <img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcSsBJR7Au9tGwko3spI1WdFeg8ZID2ddsgyVYH6WGqqG0KUhETQrDQsgBDI3EV6qDWUPxDjOlVrlCLHLhOSKxADDooiFhPJ-TGIUmQA787jYeodvC_M5lL1iEtF&usqp=CAE" alt="product desc">
                                     </a>
                                 </div><!-- End .product-nav -->
                             </div><!-- End .product-body -->
@@ -896,7 +896,7 @@
                             <figure class="product-media">
                                 <span class="product-label label-out">Out of Stock</span>
                                 <a href="product.html">
-                                    <img src="assets/images/products/product-6.jpg" alt="Product image" class="product-image">
+                                    <img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcQsugagxaE0DTVWF_pGZTEj2vZRTRQc8GxPJCPMEzabh3lQv6HwRyNSWsjWhEJW6EBM2Fyz0SIB1UbWAdWpK_8WFpEjbzs53cRXZ76-whV3Th7-Nk18CpmvsGw&usqp=CAE" alt="Product image" class="product-image">
                                 </a>
 
                                 <div class="product-action-vertical">
@@ -931,7 +931,7 @@
                             <figure class="product-media">
                                 <span class="product-label label-top">Top</span>
                                 <a href="product.html">
-                                    <img src="assets/images/products/product-11.jpg" alt="Product image" class="product-image">
+                                    <img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcQQLCi4fBJlzhkxvSrCFv__asNNN5AA-6iE2uzq8m0gE659zzgcfJofTRaDWiY2ss5elS_BbxfjNQMspI_NopIV_PRjLaI262enZluDHxARtUfe7f-Jmk1hP6w&usqp=CAE" alt="Product image" class="product-image">
                                 </a>
 
                                 <div class="product-action-vertical">
@@ -962,14 +962,14 @@
 
                                 <div class="product-nav product-nav-thumbs">
                                     <a href="#" class="active">
-                                        <img src="assets/images/products/product-11-thumb.jpg" alt="product desc">
+                                        <img src="https://product.hstatic.net/1000234467/product/61yi7vwa83l._sl1000__small.jpg" alt="product desc">
                                     </a>
                                     <a href="#">
-                                        <img src="assets/images/products/product-11-2-thumb.jpg" alt="product desc">
+                                        <img src="https://product.hstatic.net/1000234467/product/71arpwcsecl._sl1000__small.jpg" alt="product desc">
                                     </a>
 
                                     <a href="#">
-                                        <img src="assets/images/products/product-11-3-thumb.jpg" alt="product desc">
+                                        <img src="https://product.hstatic.net/1000234467/product/71ymatykdpl._sl1000__small.jpg" alt="product desc">
                                     </a>
                                 </div><!-- End .product-nav -->
                             </div><!-- End .product-body -->
@@ -978,7 +978,7 @@
                         <div class="product product-7 text-center">
                             <figure class="product-media">
                                 <a href="product.html">
-                                    <img src="assets/images/products/product-10.jpg" alt="Product image" class="product-image">
+                                    <img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcTPyOq46CMOS9wuZEoNwehXPrgMWXkZaP7qfaBBjxpXQ9Mnw10sf9wWynS-13apbXZtTsamhlG9O_Wxj8GzYFro_8h7lZK_0vZNY-mCEQC45SpW17KKgQmd&usqp=CAE" alt="Product image" class="product-image">
                                 </a>
 
                                 <div class="product-action-vertical">
@@ -1012,7 +1012,7 @@
                         <div class="product product-7 text-center">
                             <figure class="product-media">
                                 <a href="product.html">
-                                    <img src="assets/images/products/product-7.jpg" alt="Product image" class="product-image">
+                                    <img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcRNzjHP9TsLW82vFImAiVrCvDym_8OcqCMRhLh1JDNufnrTQq5BWRjUrSkP2byd2jz3OXg0-xNbzHJmy0iclt5Nmz0DKWSrktPm5kEEb209i22Zpzk4TGGArQ&usqp=CAY" alt="Product image" class="product-image">
                                 </a>
 
                                 <div class="product-action-vertical">
